--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger= INFO, file, stdout
  
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.file.File=automation.log
+log4j.appender.file.File=reports\automation.log
 #log4j.appender.file.MaxFileSize=10MB
 #log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
